# vocabularies

./: .gitignore  Dockerfile  README.md  action.yml  github_action_main.py  pyproject.toml
.github/actions/: github_action_main.py
.github/workflows/: integration.yml  process_vocab.yml  testdocs_process_vocab.yml  testjson_process_vocab.yml
cache/: readme.md  sampled_feature_type.md  vocabularies.db
docs/: .rdf  mat_materialsvocabulary.md  materialType.txt  material_sample_object_type.html  material_sample_object_type.md  material_sample_type(superseded).md  material_sample_type.html  material_sample_type.md  material_type.html  material_type.md  readme.md  sampled_feature_type.html  sampled_feature_type.md  sampledfeature.txt  sf_sampledfeaturevocabulary.md  spec_specimentypevocabulary.md  specimentType.txt
docs/cache/: material_sample_type(superseded).html
github-action/: Dockerfile  github_action_main.py
navocab/: __init__.py  __main__.py
src/: materialtype.ttl  readme.md  specimentype.ttl
src/extensions/: EES_MaterialSampleTypeExtensione.xlsx  OpenContextMaterial.ttl  biology_sampledfeature_extension.ttl  earthenv_sampled_feature_role.ttl  (+6 more)
testoutput/: material_sample_type.html  material_sample_type.md  material_type.html  material_type.md  readme.md
tests/: integration_test.py  test_navocab.py
tools/: README.md  pyproject.toml  requirements.txt  runVocabTools.py  vocab.py  vocab2mdCacheV2.py
vocabulary/: material_sample_object_type.ttl  material_sample_type(superseded).ttl  material_sample_type.ttl  material_type.ttl  sampled_feature_type.ttl
(+14 files in other folders)
