[tool.poetry]
name = "navocab"
version = "0.1.0"
description = "Implements vocabulary navigation tool."
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^6.2.0"
SQLAlchemy = "^1.4.41"
rdflib-sqlalchemy = "^0.5.3"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
navocab = "navocab.__main__:main"
